Activity ver mision paciente

--- a/Diabetest2/app/src/main/res/values/strings.xml
+++ b/Diabetest2/app/src/main/res/values/strings.xml
@@ -35,6 +35,16 @@
         <item>Medio</item>
         <item>Avanzado</item>
     </string-array>
+    <string name="title_activity_ver_mision_paciente">VerMisionPaciente</string>
+    <string name="tab_text_1">Mi Misión</string>
+    <string name="tab_text_2">Pasos</string>
+    <string name="tab_text_3">Recursos</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_mision_paciente">MisionPaciente</string>
 
 
 </resources>
