--- a/Diabetest2/app/src/main/res/values/strings.xml
+++ b/Diabetest2/app/src/main/res/values/strings.xml
@@ -45,7 +45,6 @@
     <string name="title_activity_mision_paciente">MisionPaciente</string>
 
 
-
     <!-- lols -->
     <string name="welcome_msg">Welcome!</string>
     <string name="sign_out">Sign Out</string>
@@ -59,4 +58,22 @@
     <string name="fresh_config">Fresh Config</string>
     <string name="cause_crash">Cause Crash</string>
     <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_jid">Jabber Id</string>
+    <string name="prompt_password">Password </string>
+    <string name="action_sign_in">Sign in </string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_jid">This Jid  is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="rooster_logout">Logout</string>
+    <string name="title_activity_login">Sign in</string>
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="error_invalid_email">This email address is invalid</string>
 </resources>
